--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -28,6 +28,14 @@ ru:
     users:
       updated: 'Вы обновили свой профиль'
 
+  # Склонение слова ошибка
+  declension_error:
+    error:
+      one: "%{count} ошибка"
+      few: "%{count} ошибки"
+      many: "%{count} ошибок"
+      other: "%{count} ошибок"
+
   # Перевод названия приложения и компании-разработчика
   app:
     name: 'Шашлыки'
