Add button for delete event

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -36,6 +36,9 @@ ru:
       many: "%{count} ошибок"
       other: "%{count} ошибок"
 
+  event:
+    destroy_confirmation: "Вы уверены, что хотите удалить событие?"
+
   # Перевод названия приложения и компании-разработчика
   app:
     name: 'Шашлыки'
