--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,6 +27,10 @@ ru:
       destroyed: 'Вы удалили мероприятие :('
     users:
       updated: 'Вы обновили свой профиль'
+    comments:
+      destroyed: 'Комментарий удален'
+      created: 'Ваш комментарий добавлен'
+      error: 'Ошибка с комментарием'
 
   # Склонение слова ошибка
   declension_error:
@@ -43,3 +47,7 @@ ru:
   app:
     name: 'Шашлыки'
     company: 'Хороший программист'
+
+  comments:
+    comment:
+      destroy_confirm: 'Вы уверены, что хотите удалить этот комменатрий?'
